Finalização do capitulo de machine learning
modified:   Machine_Learning.ipynb
modified:   modelo_treinado_v3.sav

--- a/Machine_Learning.ipynb
+++ b/Machine_Learning.ipynb
@@ -2312,7 +2312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "id": "6b0fe6f5-ae63-4fa9-9287-6ce8ecdeec3b",
    "metadata": {},
    "outputs": [],
@@ -2322,7 +2322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 33,
    "id": "eccfd8b7-07e6-48be-ba42-4aa84a28f1fa",
    "metadata": {},
    "outputs": [],
@@ -2353,7 +2353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 34,
    "id": "87f8f5bb-10c3-48d0-8555-f676ba0d904f",
    "metadata": {},
    "outputs": [],
@@ -2364,7 +2364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 35,
    "id": "1f04726e-9527-4882-8617-438344a4b6f8",
    "metadata": {},
    "outputs": [],
@@ -2375,7 +2375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 36,
    "id": "dc0c1cde-824d-430a-8b7e-cabea833a038",
    "metadata": {},
    "outputs": [
@@ -2385,7 +2385,7 @@
        "GaussianNB()"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2405,7 +2405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 37,
    "id": "f457c3c9-a5c4-42c4-965d-009ec38da908",
    "metadata": {},
    "outputs": [],
@@ -2415,7 +2415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 38,
    "id": "eec03e01-47a0-4eac-ba41-c6a8ea021454",
    "metadata": {},
    "outputs": [
@@ -2444,7 +2444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 39,
    "id": "7179ad7e-5627-4a42-9916-21796e116f53",
    "metadata": {},
    "outputs": [
@@ -2473,7 +2473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 40,
    "id": "5e6f75ac-e127-4d49-a695-6e00904f25c5",
    "metadata": {},
    "outputs": [
@@ -2484,7 +2484,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2496,7 +2496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 41,
    "id": "dbaa0d93-17c5-45f1-8d81-d75e99884e9d",
    "metadata": {},
    "outputs": [
@@ -2515,7 +2515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 42,
    "id": "dd9377a3-98c9-4fb5-97b4-4dfc260f427e",
    "metadata": {},
    "outputs": [
@@ -2536,7 +2536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 43,
    "id": "2f6ad27f-1289-4ca2-ad08-a59858199e08",
    "metadata": {},
    "outputs": [
@@ -2563,9 +2563,304 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "44f24530-3711-4826-b605-96661b02cb26",
+   "metadata": {},
+   "source": [
+    "# Otimizando o modelo com RandomForest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "b27ccf08-7c08-465c-b299-7f72c18044e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "b98854b2-164c-4f91-a9bc-e1ea478382db",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestClassifier(random_state=42)"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "modelo_v2 = RandomForestClassifier(random_state = 42)\n",
+    "modelo_v2.fit(X_treino, Y_treino.ravel())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "b73497fd-03a4-46b9-8d11-dd656e75dfd2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Exatidão (Accuracy): 1.0000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Verificando os dados de treino\n",
+    "rf_predict_train = modelo_v2.predict(X_treino)\n",
+    "print(\"Exatidão (Accuracy): {0:.4f}\".format(metrics.accuracy_score(Y_treino, rf_predict_train)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "96b45a04-4ca1-4f35-b776-b32bbb6d1746",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Exatidão (Accuracy): 0.7403\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Verificando nos dados de teste\n",
+    "rf_predict_test = modelo_v2.predict(X_teste)\n",
+    "print(\"Exatidão (Accuracy): {0:.4f}\".format(metrics.accuracy_score(Y_teste, rf_predict_test)))\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "9d653223-c8ad-428b-9a53-b4ea50c89d58",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confusion Matrix\n",
+      "[[ 52  28]\n",
+      " [ 32 119]]\n",
+      "\n",
+      "Classification Report\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           1       0.62      0.65      0.63        80\n",
+      "           0       0.81      0.79      0.80       151\n",
+      "\n",
+      "    accuracy                           0.74       231\n",
+      "   macro avg       0.71      0.72      0.72       231\n",
+      "weighted avg       0.74      0.74      0.74       231\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Confusion Matrix\")\n",
+    "\n",
+    "print(\"{0}\".format(metrics.confusion_matrix(Y_teste, rf_predict_test, labels = [1, 0])))\n",
+    "print(\"\")\n",
+    "\n",
+    "print(\"Classification Report\")\n",
+    "print(metrics.classification_report(Y_teste, rf_predict_test, labels = [1, 0]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee00bd59-fcf6-4be9-acc4-e6c6b279383a",
+   "metadata": {},
+   "source": [
+    "# Regressão Lógica"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "c665f63f-c580-4d91-a682-8eea4dad7736",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "b3275f5b-5a1b-4161-9512-493143ccfd63",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Terceira versão do modelo usando Regressão Logistica\n",
+    "modelo_v3 = LogisticRegression(C = 0.7, random_state= 42, max_iter = 1000)\n",
+    "modelo_v3.fit(X_treino, Y_treino.ravel())\n",
+    "lr_predict_test = modelo_v3.predict(X_teste)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "c083b9bc-f55d-414e-8f42-c653780aeeef",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Exatidão (Accuracy): 0.7359\n",
+      "\n",
+      "Classification Report\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           1       0.63      0.59      0.61        80\n",
+      "           0       0.79      0.81      0.80       151\n",
+      "\n",
+      "    accuracy                           0.74       231\n",
+      "   macro avg       0.71      0.70      0.70       231\n",
+      "weighted avg       0.73      0.74      0.73       231\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Exatidão (Accuracy): {0:.4f}\".format(metrics.accuracy_score(Y_teste, lr_predict_test)))\n",
+    "print()\n",
+    "print(\"Classification Report\")\n",
+    "print(metrics.classification_report(Y_teste, lr_predict_test, labels = [1, 0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "4b6bdd5c-3bf2-41f6-8c2b-71b384e054b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Resumindo\n",
+    "## Exatidão nos dados de teste\n",
+    "\n",
+    "# Modelo usando algoritmo Naive Bayes         = 0.7359\n",
+    "# Modelo usando algoritmo Random Forest       = 0.7400\n",
+    "# Modelo usando algoritmo Regressão Logística = 0.7446"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "55a0d03e-c165-4c74-a0f3-bdf1d0367f94",
+   "metadata": {},
+   "source": [
+    "# Fazendo Previsão com o modelo treinado"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "aa0204a5-0b4d-4edf-be91-aca09c1e0a2d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "6887bee0-d101-416c-a371-51c64ad54249",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Salvando o modelo para usar mais tarde\n",
+    "filename = 'modelo_treinado_v3.sav'\n",
+    "pickle.dump(modelo_v3, open(filename, 'wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "2c55a107-82a5-4395-8523-36eee124ef0a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[6.00000000e+00, 9.80000000e+01, 5.80000000e+01, ...,\n",
+       "        3.40000000e+01, 4.30000000e-01, 4.30000000e+01],\n",
+       "       [2.00000000e+00, 1.12000000e+02, 7.50000000e+01, ...,\n",
+       "        3.57000000e+01, 1.48000000e-01, 2.10000000e+01],\n",
+       "       [2.00000000e+00, 1.08000000e+02, 6.40000000e+01, ...,\n",
+       "        3.08000000e+01, 1.58000000e-01, 2.10000000e+01],\n",
+       "       ...,\n",
+       "       [4.85714286e+00, 1.27000000e+02, 8.00000000e+01, ...,\n",
+       "        3.63000000e+01, 8.04000000e-01, 2.30000000e+01],\n",
+       "       [6.00000000e+00, 1.05000000e+02, 7.00000000e+01, ...,\n",
+       "        3.08000000e+01, 1.22000000e-01, 3.70000000e+01],\n",
+       "       [5.00000000e+00, 7.70000000e+01, 8.20000000e+01, ...,\n",
+       "        3.58000000e+01, 1.56000000e-01, 3.50000000e+01]])"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_teste"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "ac22d065-7913-4f83-a567-c79c65285e06",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0]\n",
+      "[1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Carregando o modelo e fazendo previsão com novos conjuntos de dados \n",
+    "# (X_teste, Y_teste devem ser novos conjuntos de dados preparados com o procedimento de limpeza e transformação adequados)\n",
+    "loaded_model = pickle.load(open(filename, 'rb'))\n",
+    "resultado1 = loaded_model.predict(X_teste[15].reshape(1, -1))\n",
+    "resultado2 = loaded_model.predict(X_teste[18].reshape(1, -1))\n",
+    "print(resultado1)\n",
+    "print(resultado2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "1a0035ff-7fc2-41ec-a3f1-6c527b6ed3ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fim"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "968d108b-ff00-4524-8549-4bc4f721d7e4",
+   "id": "d4f96848-40ae-416a-8390-2ecaf6def389",
    "metadata": {},
    "outputs": [],
    "source": []
